--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 
-
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
 isort = "^5.13.2"
 flake8 = "^7.1.1"
 mypy = "^1.11.2"
+
+[tool.black]
+line-length = 120
 
 [build-system]
 requires = ["poetry-core"]
